--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
             <div class="scoreBoard">
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <div id="score">
                     <h4 id="scoreGuest">0</h4>
                 </div>
